@@ -441,7 +441,7 @@ AT_CLEANUP
 AT_SETUP([JSON GENERATE general])
 AT_KEYWORDS([extensions])
 
-AT_SKIP_IF([test "$COB_HAS_CJSON" = "no"])
+AT_SKIP_IF([test "$COB_HAS_JSON" = "no"])
 
 AT_DATA([prog.cob], [
        IDENTIFICATION       DIVISION.
@@ -491,7 +491,7 @@ AT_CLEANUP
 AT_SETUP([JSON GENERATE SUPPRESS])
 AT_KEYWORDS([extensions])
 
-AT_SKIP_IF([test "$COB_HAS_CJSON" = "no"])
+AT_SKIP_IF([test "$COB_HAS_JSON" = "no"])
 
 AT_DATA([prog.cob], [
        IDENTIFICATION       DIVISION.
@@ -530,7 +530,7 @@ AT_CLEANUP
 AT_SETUP([JSON GENERATE exceptions])
 AT_KEYWORDS([extensions JSON-CODE])
 
-AT_SKIP_IF([test "$COB_HAS_CJSON" = "no"])
+AT_SKIP_IF([test "$COB_HAS_JSON" = "no"])
 
 AT_DATA([prog.cob], [
        IDENTIFICATION DIVISION.
@@ -595,7 +595,7 @@ AT_CLEANUP
 AT_SETUP([JSON GENERATE record selection])
 AT_KEYWORDS([extensions])
 
-AT_SKIP_IF([test "$COB_HAS_CJSON" = "no"])
+AT_SKIP_IF([test "$COB_HAS_JSON" = "no"])
 
 # TO-DO: Add support for generating OCCURS items.
 
@@ -639,7 +639,7 @@ AT_CLEANUP
 AT_SETUP([JSON GENERATE trimming])
 AT_KEYWORDS([extensions])
 
-AT_SKIP_IF([test "$COB_HAS_CJSON" = "no"])
+AT_SKIP_IF([test "$COB_HAS_JSON" = "no"])
 
 # TO-DO: Add support for IBM/COBOL 2002 edited floating point (e.g. PIC 9(3)E+99).
 
@@ -652,7 +652,9 @@ AT_DATA([prog.cob], [
        01  str                     PIC X(3) VALUE "ab".
        01  num-edited              PIC 99.99 VALUE "01.00".
        01  leading-zeroes          PIC 9(5) VALUE 5.
-       01  decimal-num             PIC 99V999 PACKED-DECIMAL VALUE 0.12.
+       01  decimal-nums.
+           03  decimal-num         PIC 99V999 PACKED-DECIMAL VALUE 0.12.
+           03  decimal-num-2       PIC 99V9 VALUE 0.1.
        01  signed-decimal-num      PIC S999 COMP-X VALUE -1.
        01  comp-5-item             PIC 9(10) COMP-5 VALUE 5.
        01  index-item              INDEX.
@@ -680,8 +682,9 @@ AT_DATA([prog.cob], [
                DISPLAY "Failed 3: " FUNCTION TRIM (out)
            END-IF
 
-           JSON GENERATE out FROM decimal-num
-           IF out <> '{"decimal-num":0.120}'
+           JSON GENERATE out FROM decimal-nums
+           IF out <> '{"decimal-nums":{"decimal-num":0.120,'-
+                     '"decimal-num-2":0.1}}'
                DISPLAY "Failed 4: " FUNCTION TRIM (out)
            END-IF
 
