@@ -1,4 +1,8 @@
 
+2020-07-19  Edward Hart <edward.dan.hart@gmail.com>
+
+	* cobc.c, typeck.c: added support for JSON-C as JSON handler.
+
 2020-07-17  Edward Hart <edward.dan.hart@gmail.com>
 
 	* config.c, config.def, cobc.h, typeck.c: added dpc-in-data conf option.
